Add GitHub Pages configuration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Nowfeil.github.io/News",
+  "homepage": "https://Nowfeil.github.io/MyNews",
   "name": "newsapp",
   "version": "0.1.0",
   "private": false,
