--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Nowfeil.github.io/MyNews",
+  "homepage": "https://Nowfeil.github.io/",
   "name": "newsapp",
   "version": "0.1.0",
   "private": false,
@@ -7,26 +7,29 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.0",
     "gh-pages": "^6.1.1",
     "ghpages": "^0.0.10",
+    "otp-generator": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
+    "react-slick": "^0.30.2",
     "react-top-loading-bar": "^2.3.1",
     "react-web-share": "^2.0.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,4 +49,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
